TEST_PROGRAMS/VALID/09/runes.go
package runeconst

func main() {
	a := '\a'
	a = '\b'
	a = '\f'
	a = '\n'
	a = '\r'
	a = '\t'
	a = '\v'
	a = '\\'
	a = '\''
}
