TEST_PROGRAMS/INVALID/15/assignment3.5.go
/* LHS ':=' RHS with an expression in LHS */

package error

func f(){
    (a+2), b := 1, 2
}
